[tool.poetry]
name = "Bezyl-Beta-Test-Platform"
version = "0.0.1"
description = "Bezyl Beta is a beta features testing platform for the production release Bezyl Discord Bot. Any new commands or features will be added to this bot before uploading to the production release bot"
authors = ["Kiet Pham <kiet.riley2005@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
"discord.py" = "^1.7.2"
Flask = "^1.1.2"
youtube_dl = "^2021.4.26"
PyNaCl = "^1.4.0"
PyDictionary = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
